Version 1.1
Included record attendance method - improved logic allowing multiple days to be recorded without having to rerun the program for each day to be recorded.